--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -272,10 +272,12 @@ img {
  */
 
 #home-section {
+  height:100vh;
   .carousel-caption {
     position: absolute;
     top: 150px;
     left: -550px;
+   
   }
   .land-page-button {
     a {
