--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -309,6 +309,122 @@ section{
       flex:1;
       margin:2rem 0;
     }
+
+    .sort-grid-list{
+      display:flex;
+      flex-direction: row;
+      background-color: #1F2139;
+      justify-content: space-between;
+      //align-items: center;
+      height: 50px;
+    
+      
+      .sortby-view{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+       
+      
+      
+        .sort-by{
+          display:flex;
+          flex-direction: row;
+          text-align: center;
+          align-items: center;
+          h5{
+            color: #fff;
+            font-size: 10px;
+            margin-top: 7px;
+            margin-right: 12px;
+          }
+          ul{
+            margin-top: 7px;
+            margin-left: 7px;
+            li{
+              a{
+                font-size: 12px;
+                color:#ed1f1f;
+                text-align:center;
+                  text-decoration: none;
+                  display:block;
+                  font-weight:bold;
+                  margin-left: 0.5rem;
+                  border-bottom:#ed1f1f 1px dashed;;
+                  img{
+                    width: 10px;
+                    margin-bottom:0.2rem;
+                    margin-left:0.3rem ;
+                    //padding:5px;
+                  }
+              }
+            
+            }
+          }
+          
+        }
+        .view{
+          display:flex;
+          flex-direction: row;
+          text-align: center;
+          margin-left: 80px;
+          align-items: center;
+          h5{
+            color: #fff;
+            font-size: 10px;
+            margin-top: 7px;
+            margin-right: 12px;
+          }
+          ul{
+            margin-top: 7px;
+            margin-left: 7px;
+            li{
+              a{
+                font-size: 12px;
+                color:#ed1f1f;
+                text-align:center;
+                  text-decoration: none;
+                  display:block;
+                  font-weight:bold;
+                  margin-left: 20px;
+                  border-bottom:#ed1f1f 1px dashed;;
+                  img{
+                    width: 10px;
+                    margin-bottom:0.2rem;
+                    margin-left:0.3rem ;
+                    //padding:5px;
+                  }
+              }
+            
+            }
+          }
+        }
+      }
+      .grid-list{
+        display: flex;
+        flex-direction: row;
+        //margin-left: 180px;
+        margin-right:100px;
+        justify-content: space-evenly;
+        align-items: center;
+     
+        
+        .grid{
+          img{
+            width:70px;
+            margin-right:50px;
+         
+          }
+        }
+        .list{
+          img{
+            width:70px;
+            margin-left:50px;
+          
+          }
+        }
+        
+      }
+    }
   }
 
  }
