--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -4,6 +4,14 @@
 //fontawsome css/scss
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 
+//latobold
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+
+//latolight
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -13,14 +21,15 @@
 html,
 body {
   height: 100%; /*takes size of browser window*/
+  font-family: "Lato", sans-serif;
   // width: 100%;
   // overflow: hidden;
 }
 
-body {
-  font-family: "Roboto", sans-serif;
-  line-height: 1.4;
-}
+// body {
+//   font-family: "Roboto", sans-serif;
+//   line-height: 1.4;
+// }
 
 a {
   text-decoration: none;
@@ -132,7 +141,7 @@ img {
 }
 
 /* Navbar */
-section{
+section {
   overflow: hidden;
 }
 #navbar-section {
@@ -150,6 +159,7 @@ section{
       font-size: 8px;
       color: #fff;
       text-align: center;
+      font-family: "Lato", sans-serif;
 
       img {
         width: 15px;
@@ -278,7 +288,6 @@ section{
     position: absolute;
     top: 150px;
     left: -550px;
-   
   }
   .land-page-button {
     a {
@@ -293,145 +302,319 @@ section{
   }
 }
 
-
 /*===========================
 | | | | caar-profile section
 =============================
  */
 
- #car-profile-section{
-  .cars-grid-list-nav{
-    display:flex;
+#car-profile-section {
+  .cars-grid-list-nav {
+    display: flex;
     flex-direction: column;
-    .type-cars-nav{
-      display:flex;
+    .type-cars-nav {
+      display: flex;
       flex-direction: row;
-      flex:1;
-      margin:2rem 0;
+      flex: 1;
+      margin: 2rem 0;
     }
 
-    .sort-grid-list{
-      display:flex;
+    .sort-grid-list {
+      display: flex;
       flex-direction: row;
-      background-color: #1F2139;
+      background-color: #1f2139;
       justify-content: space-between;
       //align-items: center;
       height: 50px;
-    
-      
-      .sortby-view{
+
+      .sortby-view {
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
-       
-      
-      
-        .sort-by{
-          display:flex;
+
+        .sort-by {
+          display: flex;
           flex-direction: row;
           text-align: center;
           align-items: center;
-          h5{
+          h5 {
             color: #fff;
             font-size: 10px;
             margin-top: 7px;
-            margin-right: 12px;
+            margin-left: 12px;
           }
-          ul{
+          ul {
             margin-top: 7px;
             margin-left: 7px;
-            li{
-              a{
+            li {
+              a {
                 font-size: 12px;
-                color:#ed1f1f;
-                text-align:center;
-                  text-decoration: none;
-                  display:block;
-                  font-weight:bold;
-                  margin-left: 0.5rem;
-                  border-bottom:#ed1f1f 1px dashed;;
-                  img{
-                    width: 10px;
-                    margin-bottom:0.2rem;
-                    margin-left:0.3rem ;
-                    //padding:5px;
-                  }
+                color: #ed1f1f;
+                text-align: center;
+                text-decoration: none;
+                display: block;
+                font-weight: bold;
+                margin-left: 0.5rem;
+                border-bottom: #ed1f1f 1px dashed;
+                img {
+                  width: 10px;
+                  margin-bottom: 0.2rem;
+                  margin-left: 0.3rem;
+                  //padding:5px;
+                }
               }
-            
             }
           }
-          
         }
-        .view{
-          display:flex;
+        .view {
+          display: flex;
           flex-direction: row;
           text-align: center;
           margin-left: 80px;
           align-items: center;
-          h5{
+          h5 {
             color: #fff;
             font-size: 10px;
             margin-top: 7px;
             margin-right: 12px;
           }
-          ul{
+          ul {
             margin-top: 7px;
             margin-left: 7px;
-            li{
-              a{
+            li {
+              a {
                 font-size: 12px;
-                color:#ed1f1f;
-                text-align:center;
-                  text-decoration: none;
-                  display:block;
-                  font-weight:bold;
-                  margin-left: 20px;
-                  border-bottom:#ed1f1f 1px dashed;;
-                  img{
-                    width: 10px;
-                    margin-bottom:0.2rem;
-                    margin-left:0.3rem ;
-                    //padding:5px;
-                  }
+                color: #ed1f1f;
+                text-align: center;
+                text-decoration: none;
+                display: block;
+                font-weight: bold;
+                margin-left: 20px;
+                border-bottom: #ed1f1f 1px dashed;
+                img {
+                  width: 10px;
+                  margin-bottom: 0.2rem;
+                  margin-left: 0.3rem;
+                  //padding:5px;
+                }
               }
-            
             }
           }
         }
       }
-      .grid-list{
+      .grid-list {
         display: flex;
         flex-direction: row;
         //margin-left: 180px;
-        margin-right:100px;
+        margin-right: 100px;
         justify-content: space-evenly;
         align-items: center;
-     
-        
-        .grid{
-          img{
-            width:70px;
-            margin-right:50px;
-         
+
+        .grid {
+          img {
+            width: 70px;
+            margin-right: 50px;
           }
         }
-        .list{
-          img{
-            width:70px;
-            margin-left:50px;
-          
+        .list {
+          img {
+            width: 70px;
+            margin-left: 50px;
           }
         }
-        
       }
     }
   }
 
- }
+            /*===========================
+          | | | | aside section
+          =============================
+          */
 
+  .aside-main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    .item{
+       //flex-basis: 800px;
+       margin-left: 40px;
+       margin-top: 2rem;
+    }
+    .filter-input-price-range {
+      display: flex;
+      flex-direction: column;
+      .filter {
+        background: #2b2d42;
+        font-size: 5px;
+        // margin-top: 2rem;
+        margin-bottom: 0;
+        text-align: center;
+        color: white;
+        width: 300px;
+        padding: 5px 0;
+      }
+      .input {
+        background: #edf2f5;
+        width: 300px;
+        form {
+        }
+      }
+      .price-range{
+        background: #2B2D42;
+        width: 300px;
+        height: 90px;
+        color: white;
+        h3{
+          text-align: center;
+          margin-right: 80px;
+        }
+        .slider-text{
+          color:#ed1f1f;
+          position: relative;
+          bottom: 80px;
+          h5{
+            font-size: 15px;
+          }
+          h5.slider-text-right{
+            position: relative;
+    bottom: 30px;
+    left: 100px;
 
+          }
+        }
+      }
+      
+      .month-sale{
+        margin-top: 2rem;
+        // background: #2b2d42;
+        font-size: 5px;
+        margin-bottom: 0;
+        text-align: center;
+        width: 300px;
+        padding: 5px 0;
+        h3{
+          color: #fff;
+        }
+        a{
+          font-size: 12px;
+                color: #fff;
+                text-align: center;
+                text-decoration: none;
+                //display: block;
+                font-weight: lighter;
+                background: #ed1f1f;
+                padding: 0.5rem 2rem;
+                // margin-left: 20px;
+                // border-bottom: #ed1f1f 1px dashed;
 
+        }
+      }
+      
+    }
+    .item main{
+      .card-body{
+        width: 800px;
+        h5{
+          font-size: 0.75rem !important;
+          font-weight: bold;
+        }
+      }
+     
+    }
+  }
+ 
+}
+ /*range-filter css*/
 
+ .range_container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  margin: 35% auto;
+}
+
+.sliders_control {
+  position: relative;
+  //min-height: 50px;
+  
+  width: 250px;
+  margin-right: 100px;
+  bottom: 90px;
+  
+}
+
+.form_control {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  font-size: 24px;
+  color: #635a5a;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  width: 10px;
+  height: 10px;
+  background-color:  #ed1f1f;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #C6C6C6;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  width: 10px;
+  height: 10px;
+  background-color: #ed1f1f;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #C6C6C6;
+  cursor: pointer;  
+}
+
+input[type=range]::-webkit-slider-thumb:hover {
+  background: #ed1f1f;
+}
+
+input[type=range]::-webkit-slider-thumb:active {
+  box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+  -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
+}
+
+input[type="number"] {
+  color: #8a8383;
+  width: 50px;
+  height: 30px;
+  font-size: 20px;
+  border: none;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button {  
+   opacity: 1;
+}
+
+input[type="range"] {
+  -webkit-appearance: none; 
+  appearance: none;
+  height: 2px;
+  width: 100%;
+  position: absolute;
+  background-color: #ed1f1f;
+  pointer-events: none;
+  
+}
+
+#fromSlider {
+  height: 5px;
+  z-index: 1;
+  color: #ed1f1f;
+}
+#toSlider {
+  height: 5px;
+  z-index: 1;
+  color: #ed1f1f;
+}
 
 /*clicked styles
         (added laer in js)
