--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -425,7 +425,7 @@ section {
     }
   }
 
-            /*===========================
+  /*===========================
           | | | | aside section
           =============================
           */
@@ -434,10 +434,10 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    .item{
-       //flex-basis: 800px;
-       margin-left: 40px;
-       margin-top: 2rem;
+    .item {
+      //flex-basis: 800px;
+      margin-left: 40px;
+      margin-top: 2rem;
     }
     .filter-input-price-range {
       display: flex;
@@ -458,32 +458,31 @@ section {
         form {
         }
       }
-      .price-range{
-        background: #2B2D42;
+      .price-range {
+        background: #2b2d42;
         width: 300px;
         height: 90px;
         color: white;
-        h3{
+        h3 {
           text-align: center;
           margin-right: 80px;
         }
-        .slider-text{
-          color:#ed1f1f;
+        .slider-text {
+          color: #ed1f1f;
           position: relative;
           bottom: 80px;
-          h5{
+          h5 {
             font-size: 15px;
           }
-          h5.slider-text-right{
+          h5.slider-text-right {
             position: relative;
-    bottom: 30px;
-    left: 100px;
-
+            bottom: 30px;
+            left: 100px;
           }
         }
       }
-      
-      .month-sale{
+
+      .month-sale {
         margin-top: 2rem;
         // background: #2b2d42;
         font-size: 5px;
@@ -491,41 +490,71 @@ section {
         text-align: center;
         width: 300px;
         padding: 5px 0;
-        h3{
+        h3 {
           color: #fff;
         }
-        a{
+        a {
           font-size: 12px;
-                color: #fff;
-                text-align: center;
-                text-decoration: none;
-                //display: block;
-                font-weight: lighter;
-                background: #ed1f1f;
-                padding: 0.5rem 2rem;
-                // margin-left: 20px;
-                // border-bottom: #ed1f1f 1px dashed;
-
+          color: #fff;
+          text-align: center;
+          text-decoration: none;
+          //display: block;
+          font-weight: lighter;
+          background: #ed1f1f;
+          padding: 0.5rem 2rem;
+          // margin-left: 20px;
+          // border-bottom: #ed1f1f 1px dashed;
         }
       }
-      
     }
-    .item main{
-      .card-body{
+    .item main {
+      .card-body {
         width: 800px;
-        h5{
+        h5 {
           font-size: 0.75rem !important;
           font-weight: bold;
         }
       }
+    }
+
+    .pagination{
+  
+      padding: 20px;
      
+     
+      a{
+        text-decoration: none;
+        background-color: #a9aeaf;
+        //padding: 10px;
+        color: #e1e9eb;
+        margin:0.3rem;
+        
+        // img{
+        //   background: #2c2d41;
+        //   padding: 10px;
+        // }
+      }
+      a.img-class{
+          background: #2c2d41;
+          padding: 10px;
+      }
+      a.sec{
+        padding: 10px;
+      }
+      
+      
     }
   }
- 
 }
- /*range-filter css*/
 
- .range_container {
+/*===========================
+          | | | | footer
+          =============================
+          */
+
+/*range-filter css*/
+
+.range_container {
   display: flex;
   flex-direction: column;
   width: 80%;
@@ -535,11 +564,10 @@ section {
 .sliders_control {
   position: relative;
   //min-height: 50px;
-  
+
   width: 250px;
   margin-right: 100px;
   bottom: 90px;
-  
 }
 
 .form_control {
@@ -550,33 +578,33 @@ section {
   color: #635a5a;
 }
 
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  pointer-events: all;
-  width: 10px;
-  height: 10px;
-  background-color:  #ed1f1f;
-  border-radius: 50%;
-  box-shadow: 0 0 0 1px #C6C6C6;
-  cursor: pointer;
-}
-
-input[type=range]::-moz-range-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   pointer-events: all;
   width: 10px;
   height: 10px;
   background-color: #ed1f1f;
   border-radius: 50%;
-  box-shadow: 0 0 0 1px #C6C6C6;
-  cursor: pointer;  
+  box-shadow: 0 0 0 1px #c6c6c6;
+  cursor: pointer;
 }
 
-input[type=range]::-webkit-slider-thumb:hover {
+input[type="range"]::-moz-range-thumb {
+  -webkit-appearance: none;
+  pointer-events: all;
+  width: 10px;
+  height: 10px;
+  background-color: #ed1f1f;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px #c6c6c6;
+  cursor: pointer;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
   background: #ed1f1f;
 }
 
-input[type=range]::-webkit-slider-thumb:active {
+input[type="range"]::-webkit-slider-thumb:active {
   box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
   -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe;
 }
@@ -589,20 +617,19 @@ input[type="number"] {
   border: none;
 }
 
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button {  
-   opacity: 1;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  opacity: 1;
 }
 
 input[type="range"] {
-  -webkit-appearance: none; 
+  -webkit-appearance: none;
   appearance: none;
   height: 2px;
   width: 100%;
   position: absolute;
   background-color: #ed1f1f;
   pointer-events: none;
-  
 }
 
 #fromSlider {
